    der Erfassungsmaske
  - Bericht über Inventurerfassungen

Kleinere neue Features und Detailverbesserungen:
  - Verknüpfte Belege um die Verknüpfung von Beleg nach E-Mail-Journal erweitert.
  - Filter nach Abteilungen für Lieferplan
  - Eindeutigkeit bei Rechnungsnummern von Kreditoren. (Es erfolgt eine  Warnung bei Duplikaten (Überprüfung auf Lieferant mit Rechnungsnummer))
  - Mit SEPA-Export verknüpft Kreditorenbelege (Einkaufsrechnung oder Kreditorenbuchungen) können nicht mehr gelöscht oder storniert werden.
  - Tab "Belege" beim Kunden und Lieferanten. Offene Rechnungen, Aufträge
    werden angezeigt. Eine Umsatz und Mahnstatistik können in Tabs geöffnet
    werden. Belegtypen Angebote, Aufträge (Kunden), bzw Preisanfragen,
    Lieferantenaufträge (Lieferanten) sowie die Belege Rechnungen, Emails,
    Briefe können in weiteren Tabs angezeigt werden.

Bugfixes:
- Bugfix #336 Beim Drucken mehrerer Rechnung aus dem Bericht heraus mit aktiviertem DMS bricht mit Fehlermeldung ab
- Bugfix #359 get_payment_select_options_for_bank_transaction vereinfachen



2017-12-12 - Release 3.5.1

Größere neue Features:

- WebshopApi

  WebshopApi mit bisher einem Konnektor für Shopware.
  Damit ist es möglich Bestellungen aus dem Shop abzuholen und Artikel
  abzugleichn.

Mittelgroße neue Features:

- DATEV-Export überarbeitet

  - Um Strukturtyp CSV-Export erweitert
  - DATEV-Export: Kostenstellen (Kost1 und Kost2) vorbelegen
  - DATEV-Export: Buchungssätze nach Abteilung filtern
  - DATEV-Export: Buchungen für einen bestimmten Zeitraum ab einem
    Buchungsdatum filtern. Z.B. wenn man einen DATEV-Export für Januar schon
    exportiert hat, und im Juni noch ein Buchung für Januar nachbucht, kann man
    mit "Erfassungsdatum Von: 01.06.2017" nur diese eine Buchung aus Januar
    exportieren.
  - Überlagerung mit Kunden- Lieferantennummer als Personenkonto möglich
    Anstatt des Sammelkontos kann die Kunden- oder Lieferantennummer aus