@@ -126,6 +126,9 @@ __PACKAGE__->meta->columns(
   sdonumber                                 => { type => 'text' },
   sepa_creditor_id                          => { type => 'text' },
   sepa_reference_add_vc_vc_id               => { type => 'boolean', default => 'false' },
+  sepa_set_duedate_as_default_exec_date     => { type => 'boolean', default => 'false' },
+  sepa_set_skonto_date_as_default_exec_date => { type => 'boolean', default => 'false' },
+  sepa_set_skonto_date_buffer_in_days       => { type => 'integer', default => '0' },
   servicenumber                             => { type => 'text' },
   shipped_qty_fill_up                       => { type => 'boolean', default => 'true', not_null => 1 },
   shipped_qty_item_identity_fields          => { type => 'array', default => '{parts_id}', not_null => 1 },
